# lateral

./: .gitignore  CHANGELOG.md  Makefile  README.md  install.sh  lateral_mode_guia_paso_a_paso.md  lateral_mode_v4_actualizado.md  pyproject.toml
.claude-plugin/: marketplace.json
eval/fixtures/: mvp_tasks.json  robust_router_tasks.json  stress_router_tasks.json
lateral/: cli.py  installer.py
plugins/lateral-mode/: CHANGELOG.md  README.md
plugins/lateral-mode/.claude-plugin/: plugin.json
plugins/lateral-mode/agents/: reframer.md  verifier.md
plugins/lateral-mode/hooks/: hooks.json
plugins/lateral-mode/scripts/: lateral_hook.py
plugins/lateral-mode/skills/lateral-control/: SKILL.md
plugins/lateral-mode/skills/lateral-debug/: SKILL.md
plugins/lateral-mode/skills/lateral-design/: SKILL.md
tests/: test_lateral_mvp.py
